--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "normalize.css": "^8.0.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "8.15.0",
